--- a/content/events/2023-08-01.md
+++ b/content/events/2023-08-01.md
@@ -18,7 +18,7 @@ Adam Jonas: <a href="https://bitcoinsearch.xyz/" data-no-summary>BitcoinSearch.x
 
 ### Mailing Lists
 
-<h4> <a href="https://lists.linuxfoundation.org/pipermail/bitcoin-dev" data-no-summary>bitcoin-dev</a> </h4>
+#### <a href="https://lists.linuxfoundation.org/pipermail/bitcoin-dev" data-no-summary>bitcoin-dev</a>
 
 [On the experiment of the Bitcoin Contracting Primitives WG and marking this community process "up for grabs"](https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2023-July/021786.html)
 
