added meetup link to Doc type and added to UI

--- a/content/events/2023-07-30.md
+++ b/content/events/2023-07-30.md
@@ -1,6 +1,7 @@
 ---
 date: '2023-07-30'
 title: 'Socratic Seminar for 2023-07-30'
+meetupLink: 'https://www.meetup.com/atlantabitdevs/events/294889909/'
 type: Doc
 ---
 
